# brads-server-bot

./:  .env  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  UploadTest.txt  credits.txt  keep_alive.py  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
cogs/: _birthday-notif.py  _lofi.py  _tickets.py  _twitch.py  _whitelist.py  _yt-notif.py  config.py  db.py  embeds.py  events.py  eventsub.py  help.py  lofi.py  logs.py  mod.py  slash.py  twitch.py  yt-notif.py
data/: banned_words.json  bypass_words.json  laststatus  laststatus.json
lib/: colours.py  templates.py  texthelps.py
