[tool.poetry]
name = "repl_python3_brads-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
utils = "^1.0.1"
Flask = "^2.0.1"
discord-py-slash-command = "^2.4.1"
twitchAPI = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
